# spectralyte

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  spectralyte_audit.json
.github/workflows/: ci.yml  publish.yml
examples/: basic_audit.py  compare_models.py  full_pipeline.py
spectralyte/: __init__.py
spectralyte/core/: auditor.py  report.py  router.py
spectralyte/metrics/: anisotropy.py  density.py  dimensionality.py  intrinsic_dim.py  sensitivity.py
spectralyte/visualization/: plots_matplotlib.py  plots_plotly.py
tests/test_core/: test_auditor.py  test_router.py
tests/test_metrics/: test_anisotropy.py  test_density.py  test_dimensionality.py  test_intrinsic_dim.py  test_sensitivity.py
tests/test_visualization/: test_plots_matplotlib.py  test_plots_plotly.py
