[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spectralyte"
version = "0.2.0"
description = "Illuminating the geometry of your embedding space"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Adhviklal Thoppe", email = "adhviklal.thoppe@gmail.com" }]
requires-python = ">=3.9"
keywords = [
    "embeddings",
    "rag",
    "vector-search",
    "nlp",
    "machine-learning",
    "information-retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/UniqueRed/spectralyte"
Repository = "https://github.com/UniqueRed/spectralyte"
Issues = "https://github.com/UniqueRed/spectralyte/issues"